<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/ll_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/lost_goods"
            android:contentDescription="@string/my_app_icon" />

        <TextView
            android:id="@+id/heading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_type"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_gravity="end"
                android:orientation="horizontal"
                android:layout_weight="0">

                <RadioButton
                    android:id="@+id/radio_lost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/lost"
                    android:textColor="@color/black"
                    android:checked="true"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/radio_found"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/found"
                    android:textSize="18sp"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hintColor"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_product_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:layout_marginBottom="4dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hintColor"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_your_phone_number"
                android:inputType="phone"
                android:textColor="@color/black"
                android:layout_marginBottom="4dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hintColor"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/multi_tv_description"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/description_tag_hint"
                android:inputType="textMultiLine"
                android:imeOptions="actionDone"
                android:gravity="start|top"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:completionThreshold="10"
                android:singleLine="false"
                android:layout_marginBottom="4dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hintColor"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_date"
                android:inputType="date"
                android:textColor="@color/black"
                android:layout_marginBottom="4dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/hintColor"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginEnd="8dp" />
            <EditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enter_location"
                android:inputType="text"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp" />

        </LinearLayout>


        <Button
            android:id="@+id/create_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_post"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:shadowColor="@color/black"
            android:textColor="@android:color/white"
            android:padding="16dp"/>

    </LinearLayout>

</LinearLayout>
