<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/ll_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/lost_goods"
            android:contentDescription="@string/my_app_icon" />

        <TextView
            android:id="@+id/heading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/create_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_post"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:shadowColor="@color/black"
            android:textColor="@android:color/white"
            android:padding="16dp"/>

        <Button
            android:id="@+id/all_posts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/all_posts"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:shadowColor="@color/black"
            android:textColor="@android:color/white"
            android:padding="16dp"/>
    </LinearLayout>
</LinearLayout>
